@CaldoNic7 add btton to generate password
This commit adds a button to generate the password and to re run the password generator without refreshing the page

--- a/password_generator/templates/generator.html
+++ b/password_generator/templates/generator.html
@@ -4,9 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.mil.js">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.mil.js"></script>
   <title>Password Generator</title>
 </head>
 <body>
   Your generated password is: {{password}}
+  <br>
+  <br>
+  <form action="/" method="get" id="passwordForm">
+    <button type="submit" name="rerun" value="regen" form="passwordForm">Re-generate password</button>
+  </form>
 </body>
 </html>
