--- a/password_generator/templates/generator.html
+++ b/password_generator/templates/generator.html
@@ -7,13 +7,33 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.mil.js">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.mil.js"></script>
   <title>Password Generator</title>
+  <!-- {% load static %}
+  <link rel="stylesheet" href="{% static 'generator.css'%}"> -->
+  <style>
+    #gen-text{
+      text-align: center;
+    }
+    #nav{
+      background-color: rgb(67, 75, 82);
+    }
+  </style>
 </head>
 <body>
-  Your generated password is: {{password}}
+  <div id="nav">
+    <br>
+    <br>
+    <br>
+  </div>
   <br>
   <br>
-  <form action="/" method="get" id="passwordForm">
-    <button type="submit" name="rerun" value="regen" form="passwordForm">Re-generate password</button>
-  </form>
+  <div id="gen-text">
+    <h3>Your generated password is: </h3>
+    <p>{{password}}</p>
+    <br>
+    <br>
+    <form action="/" method="get" id="passwordForm">
+      <button type="submit" class="btn btn-primary" name="rerun" value="regen" form="passwordForm">Generate New Password</button>
+    </form>
+  </div>
 </body>
 </html>
